--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "backend"]
 	path = backend
 	url = https://github.com/lucasgvr/crud-robson-backend.git
+[submodule "frontend"]
+	path = frontend
+	url = https://github.com/lucasgvr/crud-robson-frontend.git
